--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "alloyfinger": "^0.1.8",
     "axios": "^0.16.2",
     "echarts": "^3.6.2",
     "muse-ui": "^2.0.3",
